--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "version": 2,
     "builds": [{
         "src": "*py",
-        "use": "@liudonghua123/now-flask"
+         "use": "@now/python",
+      "config": { "maxLambdaSize": "10mb" }
     }],
     "routes": [
         { "src": "(.*)", "dest": "app.py" }
